--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4607,8 +4607,10 @@ textarea.form-control-lg {
   }
 }
 .accordion-button:not(.collapsed) {
-  color: var(--bs-accordion-active-color);
-  background-color: var(--bs-accordion-active-bg);
+/*  color: var(--bs-accordion-active-color);
+  background-color: var(--bs-accordion-active-bg);*/
+  color: #202021;
+  background-color: #218283;
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 .accordion-button:not(.collapsed)::after {
