--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@
 .footer {
     position: relative;
     width: 100%;
-    background: #D4E3FC;
+    background: #3586ff;
     min-height: 100px;
     padding: 20px 50px;
     display: flex;
