--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,13 @@
 }
 
 /*Damien : Footer*/
+
 .Toutfooter {
     display: flex;
     background: #ffffff;
     justify-content: flex-end;
     align-items: flex-end;
-    min-height: 40vh;
+    min-height: 60vh;
 }
 .footer {
     position: relative;
@@ -149,7 +150,7 @@
     left: 0;
     width: 100%;
     height: 100px;
-    background: url("https://i.ibb.co/wQZVxxk/wave.png");
+    background-image: url("https://i.ibb.co/wQZVxxk/wave.png");
     background-size: 1000px 100px;
 }
 
