--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-*{
+/**{
     box-shadow: 0 0 3px red;
-}
+}*/
 /* Restriction sur la taille du logo dans la navbar*/
 .logo {
     max-width: 150px;
