--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@
     justify-content: flex-end;
     align-items: flex-end;
     min-height: 60vh;
+
 }
 .footer {
     position: relative;
@@ -236,3 +237,138 @@
     display: none; /* L'image est cachée initialement */
 }
 
+/*Page Service en ligne*/
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
+
+.boite {
+    font-family: 'Nunito', sans-serif;
+    box-sizing: border-box;
+    outline: none; border:none;
+    text-decoration: none;
+    transition: all .2s linear;
+    max-width: 1200px;
+    margin:0 auto;
+    padding:3rem 2rem;
+}
+/*Titre de la page*/
+.boite .title{
+    font-size: 3.5rem;
+    color:#444;
+    margin-bottom: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+}
+/*Espacement de toutes les boites*/
+.boite .products-boite{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap:2rem;
+}
+/*Rangement de toutes les boites*/
+.boite .products-boite .product{
+    text-align: center;
+    padding:3rem 2rem;
+    background: #fff;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    outline: .1rem solid #ccc;
+    outline-offset: -1.5rem;
+    cursor: pointer;
+}
+/*Bordure de la boîte*/
+.boite .products-boite .product:hover{
+    outline: .2rem solid #218283;
+    outline-offset: 0;
+}
+
+/*Taille des logos des boites*/
+.boite .products-boite .product img{
+    height: 10rem;
+}
+/*Dezoom du logo de la boite*/
+.boite .products-boite .product:hover img{
+    transform: scale(.9);
+}
+/*Taille titre de la boite*/
+.boite .products-boite .product h3{
+    padding:0.5rem 0;
+    font-size: 2rem;
+    color:#444;
+}
+/*Couleur du titre de la boite*/
+.boite .products-boite .product:hover h3{
+    color:#27ae60;
+}
+/*fond noir du pop up*/
+.products-preview{
+    position: fixed;
+    top:0; left:0;
+    min-height: 100vh;
+    width: 100%;
+    background: rgba(0,0,0,.8);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+/*Taille de la boite pop up*/
+.products-preview .preview{
+    display: none;
+    padding:2rem;
+    text-align: center;
+    background: #fff;
+    position: relative;
+    margin:2rem;
+    width: 40rem;
+
+}
+/*affichage du pop up*/
+.products-preview .preview.active{
+    display: inline-block;
+}
+
+/* Croix du pop up*/
+.products-preview .preview .fa-times{
+    position: absolute;
+    top:1rem; right:1.5rem;
+    cursor: pointer;
+    color:#444;
+    font-size: 4rem;
+}
+/*Tourner de la croix*/
+.products-preview .preview .fa-times:hover{
+    transform: rotate(70deg);
+}
+/* Titre du pop up*/
+.products-preview .preview h3{
+    color:#444;
+    padding:.5rem 0;
+    font-size: 2.5rem;
+}
+/* Taille des liens du pop up*/
+.products-preview .preview p{
+    text-align: left;
+    line-height: 1.5;
+    padding:1rem 0;
+    font-size: 1.2rem;
+    color:#777;
+}
+
+@media (max-width:991px){
+
+    html{
+        font-size: 55%;
+    }
+}
+
+@media (max-width:768px){
+
+    .products-preview .preview img{
+        height: 25rem;
+    }
+}
+
+@media (max-width:450px){
+
+    html{
+        font-size: 50%;
+    }
+}
