--- a/css/carousell.css
+++ b/css/carousell.css
@@ -7,7 +7,7 @@
   /*font-family: "Poppins", sans-serif;*/
 
 }
-/*.tout {
+.tout {
   display: flex;
   padding: 0 35px;
   align-items: center;
@@ -15,7 +15,7 @@
   min-height: 100vh;
 
 
-}*/
+}
 .wrapperauto {
   max-width: 1100px;
   width: 100%;
