--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/**{
+*{
     box-shadow: 0 0 3px red;
-}*/
+}
 /* Restriction sur la taille du logo dans la navbar*/
 .logo {
     max-width: 150px;
@@ -15,6 +15,7 @@
 /* mise en page à l'interieur de la nav bar afin de mettre tous à gauche le chaps recherhce*/
 .navbar .navbar-collapse form {
     margin-left: auto;
+
 }
 
 /*Mise en page de l'image d'accueil*/
@@ -52,6 +53,11 @@
     max-width: 100px;
     height: auto;
     margin: 0 auto;
+}
+.navbar{
+    position: fixed;
+    width: 100%;
+    z-index: 9999;
 }
 
 /* Ajout d'une ombre + effet lorsque l'on survole une carde */
@@ -237,6 +243,7 @@
     display: none; /* L'image est cachée initialement */
 }
 
+/* -------------------------------------------------- CAROUSEl ------------------------------------------------*/
 /*Page Service en ligne*/
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
 
