--- a/css/carousell.css
+++ b/css/carousell.css
@@ -104,13 +104,18 @@
   height: 140px;
   border-radius: 50%;
   object-fit: cover;
-  border: 4px solid rgba(33, 130, 131, 0.68);
+  border: 4px solid rgb(0, 0, 0);
 }
 
 .carouselauto .card h2 {
   font-weight: 500;
-  font-size: 1.56rem;
-  margin: 30px 0 5px;
+  font-size: 1.5rem;
+ /* margin: 30px 15px 5px;*/
+  text-align:left ;
+  margin-top: 25px;
+  margin-left: 25px;
+  margin-right: 5px;
+
 }
 
 .carouselauto .card span {
