Page 2 ajout des élus

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-*{
+/**{
     box-shadow: 0 0 3px red;
-    font-family: 'Segoe UI', sans-serif;
-}
+    font-family: 'Segoe UI Variable', sans-serif;
+}*/
 /* Restriction sur la taille du logo dans la navbar*/
 .logo {
     max-width: 150px;
