--- a/css/Contcart.css
+++ b/css/Contcart.css
@@ -1,8 +1,9 @@
-/** {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}*/
+* {
+    font-family: 'Segoe UI', sans-serif;
+    /*padding: 0;
+    margin: 0;
+    box-sizing: border-box;*/
+  }
 .cart {
 
     display: flex;
