--- a/css/carousell.css
+++ b/css/carousell.css
@@ -3,9 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-
-  /*font-family: "Poppins", sans-serif;*/
-
+  font-family: 'Segoe UI', sans-serif;
 }
 .tout {
   display: flex;
