Amélioration page d'acceuil

--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@
     left: 0;
     width: 100%;
     height: 100px;
-    background-image: url("https://i.ibb.co/wQZVxxk/wave.png");
+    background-image: url("https://i.ibb.co/zZ0mmk1/Wave.png");
     background-size: 1000px 100px;
 }
 
