--- a/css/Ltouristique.css
+++ b/css/Ltouristique.css
@@ -15,6 +15,7 @@
 @media(min-width: 540px){
     .cardtst {
         grid-template-columns: repeat(2, 1fr);
+
     }
 
 }
@@ -23,6 +24,15 @@
     .cardtst {
         grid-template-columns: repeat(4, 1fr);
     }
+}
+@media screen and (max-width: 576px) {
+    .cardt{
+        margin-left: 5%;
+        margin-right: 5%;
+
+    }
+
+
 }
 
 .cardt {
