--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 
     /*box-shadow: 0 0 3px red;*/
 }
+
 body{
     background-color: #fdf4e3;
 }
@@ -68,7 +69,7 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-    color: #000000;
+    color: white;
     font-size: 90px;
     font-weight: 700;
     text-align: center;
@@ -94,6 +95,7 @@ body{
     height: auto;
     margin: 0 auto;
 }
+
 .navbar{
     position: fixed;
     width: 100%;
@@ -101,10 +103,9 @@ body{
 }
 
 /* Ajout d'une ombre + effet lorsque l'on survole une carde */
-
 .card-style:hover {
     transform: scale(1.1);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px #031f73;
 }
 
 /*Style du texte de la card*/
@@ -182,7 +183,7 @@ body{
 /*Icone social footer*/
 .social-icon__link {
     font-size: 2rem;
-    color: #fff;
+    color: white;
     margin: 0 10px;
     display: inline-block;
     transition: 0.5s;
@@ -195,7 +196,7 @@ body{
 /*Texte du footer*/
 .menu__link {
     font-size: 1.2rem;
-    color: #fff;
+    color: white;
     margin: 0 10px;
     display: inline-block;
     transition: 0.5s;
@@ -210,7 +211,7 @@ body{
 
 /*Dernier Texte du footer*/
 .footer p {
-    color: #fff;
+    color: white;
     margin: 15px 0 10px 0;
     font-size: 1rem;
     font-weight: 300;
