--- a/css/carte.css
+++ b/css/carte.css
@@ -20,9 +20,10 @@
     transition: all 0s ease-in-out;
     transform-style: preserve-3d; /*to allow 3d on images*/
 }
-
+/*Face avant des cartes - page commune*/
 .front {
     background-position: left;
+    color: white;
 }
 
 .back {
@@ -30,18 +31,18 @@
     transform: rotateY(180deg); /*rotate this face*/
 }
 
-/*Back*/
+/*Texte au dos des cartes - page commune*/
 .back-content {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #000000;
+    color: white;
 }
-
+/*Texte en dessous de Nos contact - page commune*/
 a {
-    color: #000000;
+    color: white;
     cursor: pointer;
     text-decoration: none;
 }
