Amélioration page d'acceuil

--- a/css/Contcart.css
+++ b/css/Contcart.css
@@ -22,7 +22,7 @@ a:active {
 /*Lire la suite du texte - page commune*/
 a:hover {
     text-decoration: underline;
-    color: #031f73;
+    color: #ffffff;
 }
 /*formulaire de contact à côté de la carte - page commune*/
 .wrapper {
