--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     font-family: 'Segoe UI', sans-serif;
 
-    /*box-shadow: 0 0 3px red;*/
+    box-shadow: 0 0 3px red;
 }
 
 body{
@@ -218,7 +218,7 @@ body{
     left: 0;
     width: 100%;
     height: 100px;
-    background-image: url("https://i.ibb.co/zZ0mmk1/Wave.png");
+    background-image: url("https://i.ibb.co/Jq9hNH5/wavee-removebg-preview.png");
     background-size: 1000px 100px;
 }
 
