--- a/css/Erreur.css
+++ b/css/Erreur.css
@@ -5,7 +5,7 @@
     top:50%;
     transform: translateY(-50%);
     text-align: center;
-    color: #218283;
+    color: #1313ce;
 }
 .erreur h1 {
     font-size: 160px;
