--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4610,7 +4610,7 @@ textarea.form-control-lg {
 /*  color: var(--bs-accordion-active-color);
   background-color: var(--bs-accordion-active-bg);*/
   color: #202021;
-  background-color: #218283;
+  background-color: #af0606;
   box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
 }
 .accordion-button:not(.collapsed)::after {
