--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,14 @@ body{
     height: 800px;
     margin-bottom: -7%;
 
+
 }
 
 .custom-image-container video {
     max-width: 100%; /* La vidéo ne dépassera pas la largeur de son conteneur */
     height: auto; /* La hauteur est automatiquement ajustée pour conserver les proportions d'origine */
     pointer-events: none; /* Désactive toute interaction avec la vidéo */
+    z-index: -9999;
 }
 
 /*ecriture sur l'image*/
