--- a/css/Erreur.css
+++ b/css/Erreur.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Segoe UI', serif;
+    /*box-shadow: 0 0 3px red;*/
+}
 
 .erreur{
     width: 100%;
@@ -5,29 +9,33 @@
     top:50%;
     transform: translateY(-50%);
     text-align: center;
-    color: #1313ce;
+    color: #031f73;
 }
+
 .erreur h1 {
     font-size: 160px;
     margin: 0;
     font-weight: 900;
     letter-spacing: 20px;
-    background-color:#0f5132  /*center no-repeat*/;
+    background-color:#031f73  /*center no-repeat*/;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+
 .erreur a{
     text-decoration: none;
-    background: #218283;
-    color: #2c0b0e;
+    background: #031f73;
+    color: white;
     padding: 12px 24px;
     display: inline-block;
     border-radius: 25px;
     text-transform: uppercase;
     transition: 0.5s;
+}
 
-}
 .erreur a:hover{
-    background: #0dcaf0;
+    background: #af0606;
 }
+
+
 
