--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,9 @@ body{
         margin-top: 5%;
         padding: 5% ;
     }
+    .card-style p{
+
+    }
 }
 
 @media screen and (max-width: 576px) {
